error.log
> feedeliza-plus@1.0.0 start
> node server.js
2025-09-13 15:49:40 [info]: 	✅ Conexão com banco de dados estabelecida
2025-09-13 15:49:43 [error]: 	❌ Erro ao iniciar servidor: Invalid or unexpected token
/app/src/domains/surveys/surveys.service.js:160
                    where: { '$survey.restaurant_id
                             ^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Invalid or unexpected token
    at wrapSafe (node:internal/modules/cjs/loader:1464:18)
    at Module._compile (node:internal/modules/cjs/loader:1495:20)
    at Module._extensions..js (node:internal/modules/cjs/loader:1623:10)
    at Module.load (node:internal/modules/cjs/loader:1266:32)
    at Module._load (node:internal/modules/cjs/loader:1091:12)
    at Module.require (node:internal/modules/cjs/loader:1289:19)
    at require (node:internal/modules/helpers:182:18)
    at module.exports (/app/src/domains/surveys/surveys.controller.js:2:27)
    at module.exports (/app/src/domains/surveys/surveys.routes.js:8:61)
    at /app/routes/index.js:36:52